--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>dropwizard-swagger</artifactId>
             <version>2.0.0-1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.vyarus</groupId>
+            <artifactId>dropwizard-guicey</artifactId>
+            <version>5.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
